--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -2,6 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "43f423cc-5634-4ec4-a57e-8414f34c4a9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'seaborn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m mean_absolute_error, r2_score, make_scorer\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mseaborn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msns\u001b[39;00m\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# load data\u001b[39;00m\n\u001b[32m     16\u001b[39m df = pd.read_csv(\u001b[33m\"\u001b[39m\u001b[33msteel.csv\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'seaborn'"
+     ]
+    }
+   ],
+   "source": [
+    "# imports, setup\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.model_selection import KFold, cross_validate, GridSearchCV\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import mean_absolute_error, r2_score, make_scorer\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# load data\n",
+    "df = pd.read_csv(\"steel.csv\")\n",
+    "\n",
+    "# features/target\n",
+    "X = df.drop(\"tensile_strength\", axis=1)\n",
+    "y = df[\"tensile_strength\"]\n",
+    "\n",
+    "scoring = {\n",
+    "    \"R2\": make_scorer(r2_score),\n",
+    "    \"MAE\": make_scorer(mean_absolute_error)\n",
+    "}\n",
+    "\n",
+    "kfold = KFold(n_splits=10, shuffle=True, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "55a408e8-a95b-4464-a49c-965c3e703296",
    "metadata": {},
